# zuklink

./: .env.example  CLAUDE.md  Cargo.toml  README.md  compose.yaml
apps/zuk-bolt/: .env.example  Cargo.toml  README.md
apps/zuk-bolt/src/: main.rs
apps/zuk-bolt/src/dto/: ingestion.rs  mod.rs
apps/zuk-bolt/src/handlers/: ingestion.rs  mod.rs
apps/zuk-bolt/src/routes/: ingestion.rs  mod.rs
apps/zuk-sink/: Cargo.toml
libs/zuklink-domain/: Cargo.toml  README.md
libs/zuklink-domain/src/: lib.rs  ports.rs
libs/zuklink-domain/src/ingestion/: entity.rs  error.rs  ids.rs  mod.rs  ports.rs  service.rs
libs/zuklink-s3/: Cargo.toml
libs/zuklink-s3/src/: lib.rs
libs/zuklink-s3/src/infrastructure/: mod.rs  s3_repository.rs
libs/zuklink-yellowpage/: Cargo.toml  README.md
libs/zuklink-yellowpage/examples/: simple.rs
libs/zuklink-yellowpage/src/: error.rs  lib.rs  node.rs
libs/zuklink-yellowpage/tests/: sharding_test.rs
