[workspace]
resolver = "2"
members = [
    "libs/zuklink-domain",
    "libs/zuklink-yellowpage",
    "apps/zuk-bolt",
    "apps/zuk-sink", "libs/zuklink-s3",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Joris VILARDELL <joris.vilardell@outlook.com>"]
license = "Apache-2.0"
repository = "https://github.com/jorisvilardell/zuklink"

[workspace.dependencies]
# Async Runtime
tokio = { version = "1.40", features = ["full"] }

# Tracing & Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# S3 Client
aws-sdk-s3 = "1.52"
aws-config = "1.5"

# Networking
bytes = "1.7"

# UUID Generation
uuid = { version = "1.10", features = ["v7", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
dotenvy = "0.15"

# Testing
mockall = "0.13"
async-trait = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
