[package]
name = "zuk-bolt"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Stateless sender service for ZukLink distributed streaming platform"

[dependencies]
# Internal Dependencies
zuklink-domain = { path = "../../libs/zuklink-domain" }
zuklink-s3 = { path = "../../libs/zuklink-s3" }

# Async Runtime
tokio = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error Handling
anyhow = { workspace = true }

# S3 Client
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }

# HTTP Server
axum = "0.7"

# OpenAPI / Swagger
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }

# Networking
bytes = { workspace = true }

# UUID Generation
uuid = { workspace = true }

# Time
chrono = { workspace = true }

# Config
dotenvy = { workspace = true }

[[bin]]
name = "zuk-bolt"
path = "src/main.rs"
