[package]
name = "zuk-sink"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Stateful receiver service for ZukLink distributed streaming platform"

[dependencies]
# Internal Dependencies
zuklink-yellowpage = { path = "../../libs/zuklink-yellowpage" }

# Async Runtime
tokio = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error Handling
anyhow = { workspace = true }

# S3 Client
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }

# Networking
bytes = { workspace = true }

# Time
chrono = { workspace = true }

# Config
dotenvy = { workspace = true }

[[bin]]
name = "zuk-sink"
path = "src/main.rs"
