[package]
name = "zuklink-s3"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "S3 storage adapter for ZukLink distributed streaming platform"

[dependencies]
# Internal Dependencies
zuklink-domain = { path = "../zuklink-domain" }

# AWS SDK
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }

# Async Runtime
tokio = { workspace = true }

# Error Handling
thiserror = { workspace = true }

# Tracing
tracing = { workspace = true }

# Utilities
bytes = { workspace = true }

[dev-dependencies]
# Testing
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true }
